# Desafio-Energy2GO

./: .env  .env.example  .gitignore  .gitmodules  docker-compose.yaml  readme.md
app/: Dockerfile  pyproject.toml
app/apps/: urls.py
app/apps/hardware/: apps.py  urls.py  views.py
app/apps/hardware/admin/: batery.py  station.py
app/apps/hardware/migrations/: 0001_initial.py
app/apps/hardware/models/: batery.py  station.py
app/apps/hardware/serializers/: __init__.py  station.py
app/apps/hardware/utils/: mqtt.py
app/apps/sales/: apps.py  serializers.py  urls.py  views.py
app/apps/sales/admin/: transaction.py
app/apps/sales/migrations/: 0001_initial.py  0002_transaction_station.py
app/apps/sales/models/: transaction.py
app/apps/sales/signals/: __init__.py  update_transaction_status.py
app/apps/sales/tasks/: transaction_confirmations.py
app/apps/transaction/: models.py  serializers.py  views.py
app/apps/transaction/migrations/: 0001_initial.py
app/config/: celery.py  settings.py  urls.py
equipamento/: Dockerfile  main.c
mosquitto/: init.sh  mosquitto.conf  passwd
